fix : index.html shifting 현상 오류 조치

--- a/public/assets/css/base/variables.css
+++ b/public/assets/css/base/variables.css
@@ -4,6 +4,7 @@
   --color-primary-dark: #00b894;
   --color-secondary: #f8f8f8;
   --color-tertiary: #aaaaaa;
+  --color-white: #FFFFFF;
 
   --color-kakao: #ffe500;
 
